	Recompiling on windows fixed! (KeitIG helped a lot with testing!)
	Before any output, print ### Thursday 16 Sep - 16.21.11 ### (log divider)
	New Windows EXE

==Beta8==
	Warning if no images inside APK/IN
	the callback now searches if the option is defined and runs it without the if: func() syntax.
	added Android tab with 2 functions
	Adb FileManager defined :) 
	ADB: push, pull, list, browse, previous, refresh
	Configure ADB:
		Connect to device via IP
	Added Backup/Restore functionality

==Beta9==
	Added Build.prop editor
	Fixed bug in ADB Configure were ADB server was not started yet
	Added restore backup (whoops)
	Added message after backup wich tells you to safely copy your backups to an other directory
	Fixed Update option, typo again >:(
	Still working on LiveLogcat

==Beta10==
	UPDATED WINDOWS EXE
	Fixed bug where closing Install Utilities wasn't working perfectly
	Resize now has 9patch dependencies
	Updated backup/Restore
	-Now has frames for usability
	-Now contains backup/restore contacts, WiFi and SMS/MMS only too
	Fixed Logcat

==Beta11==
	Updated Windows EXE
	Moved CleanWorkspace to the Options menu
	Added divider in Options menu
	Renamed Utilities to Images
	Install Utilities now installs only ImageMagick and PIL
	Added PIL Grayscale, more PIL on the horizon!
	PIL is a Python Image Library, written in (DUH) python. So no need to install external trash anymore
	PIL Will be used as a replacement for ImageMagick in the future...

	Added the Beta branch, nightly builds available.
	WOW!
	When updating via Options > Update, you can now choose branch :)
	Added ADB over Network
	
==Beta12==
	Branching updated
	ADB FileManager now has tools as set permissions, delete, copy, cut, paste
	(Made images for preview)
	Updated Dutch Language
	Removed FirstRun message

	

Feature requests are always welcome :)
Also, if you want to contribute, don't hestitate to contact me!
Azblankin, KeitlG are already contributing to this project!