@@ -171,6 +171,7 @@ Updates:
 	(Made images for preview)
 	Updated Dutch Language
 	Removed FirstRun message
+	Added About option (In Options menu @ top bar)
 
 	
 
